Bug 510656 - Make e(fx)clipse applications run on Java9
Change-Id: I2c364f89bb0075ff2bbaed06369bf614c31cdfdb